# RAIN

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ci  Dockerfile.debian  INSTALL_RAIN.cmd  INSTALL_RAIN.ps1  PLAN.md  RAIN_LAB_MEETING_LOG.md  README.fr.md  README.ja.md  README.md  README.ru.md  README.vi.md  README.zh-CN.md  README_RATING.md  REVIEW.md  START_HERE.md  TODOS.md  agents.py  bootstrap_local.py  build.rs  chat_with_james.py  circuit_breaker.py  config.example.toml  deploy.py  episodic_memory_ingestor.py  external_integrations.py  godot_setup.py  hello_os_executable.py  hypothesis_tree.py  james_reader.py  library_compiler.py  meeting_workflow.py  metrics_log.jsonl  openclaw_service.py  (+16 more)
.github/: dependabot.yml
benches/: agent_benchmarks.rs
crates/rain-bench/: Cargo.toml  README.md
crates/rain-bench/benches/: recall_integrity.rs  store_concurrent.rs
crates/rain-bench/src/: lib.rs
crates/rain-bench/tests/: bench_tests.rs
dev/: ci.sh  config.template.toml
docs/: README.fr.md  README.ja.md  README.md  README.ru.md  README.zh-CN.md  SUMMARY.md  commands-reference.fr.md  commands-reference.md  config-reference.fr.md
james_library/: __init__.py
lab/: orchestrator.py
lab_server/: app.py  research_panel.py
meeting_archives/: launcher_events.jsonl
rain_lab_chat/: __init__.py  agents.py  cli.py  config.py  context.py  logging_events.py  orchestrator.py  response_gen.py  voice.py  web_search.py
src/: i18n.rs  identity.rs  lib.rs  main.rs  multimodal.rs  util.rs
tests/: agent_e2e.rs  (+19 more)
(+252 files in other folders)
