[package]
name = "rain-bench"
version = "0.1.0"
edition = "2021"
publish = false
description = "Concurrency benchmarks for the rain-labs memory subsystem"

[dependencies]
rain-labs = { path = "../../" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
tempfile = "3"

[[bench]]
name = "store_concurrent"
harness = false

[[bench]]
name = "recall_integrity"
harness = false
